core : update app icon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: diceshelf
-version: 1.0.0+1
+version: 1.2.0+1
 publish_to: none
 description: A beautiful PDF reader with annotations, bookmarks, and library management.
 
@@ -59,7 +59,7 @@ flutter_launcher_icons:
   ios: true
   image_path: "assets/icons/app_icon.png"
   adaptive_icon_background: "#141B1E"
-  adaptive_icon_foreground: "assets/icons/app_icon_foreground.png"
+  adaptive_icon_foreground: "assets/icons/app_icon.png"
   min_sdk_android: 21
   web:
     generate: false
